--- a/css/gallery.css
+++ b/css/gallery.css
@@ -83,13 +83,15 @@
 }
 
 .csslider > .navigation label {
-    background: transparent none repeat scroll 0 0;
-    border-radius: 50%;
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 1px 5px;
-    padding: 4px;
-    position: relative;
+	background: transparent none repeat scroll 0 0;
+	border-radius: 50%;
+	cursor: pointer;
+	display: inline-block;
+	margin: 0 1px 5px;
+	padding: 4px;
+	position: relative;
+	height: 70px;
+	width: 70px;
 }
 
 .csslider > .navigation label:hover::after {
